--- a/app/src/main/res/layout/fragment_cities_list.xml
+++ b/app/src/main/res/layout/fragment_cities_list.xml
@@ -20,6 +20,6 @@
         android:id="@+id/tv_list_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/cities_empty_list"/>
+        android:text="@string/citiesEmptyList"/>
 
 </LinearLayout>
