--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,37 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.ForTextView">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="AppTheme.ForTextView.Label" parent="AppTheme.ForTextView">
+        <item name="android:gravity">end</item>
+        <item name="android:background">@drawable/text_view_style_for_label</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/colorButtonText</item>
+    </style>
+    <style name="AppTheme.ForTextView.Result" parent="AppTheme.ForTextView">
+        <item name="android:gravity">start</item>
+        <item name="android:background">@drawable/text_view_style_for_result</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/colorMainText</item>
+    </style>
+
+    <style name="AppTheme.HorizontalLinearLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_marginEnd">10dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+
 </resources>
