--- a/app/src/main/res/layout-land/activity_main_app.xml
+++ b/app/src/main/res/layout-land/activity_main_app.xml
@@ -13,7 +13,7 @@
         android:layout_weight="1"/>
 
     <FrameLayout
-        android:id="@+id/fl_weather_details"
+        android:id="@+id/fr_weather"
         android:layout_width="0px"
         android:layout_height="match_parent"
         android:layout_weight="1">
